# drone_mobile_python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: test.yml
drone_mobile/: __init__.py  async_client.py  auth.py  cli.py  client.py  const.py  device_srp.py  drone_mobile.py  exceptions.py  models.py  vehicle.py
drone_mobile/tests/: __init__.py
tests/: __init__.py  test_auth.py  test_client.py  test_device_remembering.py  test_device_srp.py  test_models.py
