[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_mobile"
version = "0.3.1"
description = "Python wrapper for the DroneMobile API for Firstech/Compustar remote start systems."
readme = "README.md"
authors = [
    {name = "bjhiltbrand", email = "info@bjhiltbrand.me"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
keywords = ["dronemobile", "compustar", "firstech", "remote-start", "car", "vehicle"]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.0.285",
    "pre-commit>=3.3.3",
    "types-requests>=2.31.0",
    "build>=1.0.0", # Added missing 'build' tool
]
async = [
    "aiohttp>=3.8.5",
    "aiofiles>=23.2.0",
]

[project.urls]
Homepage = "https://github.com/bjhiltbrand/drone_mobile_python"
Documentation = "https://github.com/bjhiltbrand/drone_mobile_python#readme"
Repository = "https://github.com/bjhiltbrand/drone_mobile_python"
"Bug Tracker" = "https://github.com/bjhiltbrand/drone_mobile_python/issues"

[project.scripts]
drone-mobile-demo = "drone_mobile.cli:main"

[tool.setuptools]
packages = ["drone_mobile"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312',]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint] # Restructured the linting settings under [tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B017", # Allow tests that are designed to mock failures to run
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=drone_mobile",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
]

[tool.coverage.run]
source = ["drone_mobile"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
